--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,16 +5,21 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".util.MyApplication"
         android:allowBackup="true"
+        android:requestLegacyExternalStorage="true"
         android:icon="@drawable/sofra_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/sofra_logo"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.AuthActivity"></activity>
+        <activity android:name=".ui.activities.CameraActivity"/>
+        <activity
+            android:name=".ui.activities.AuthActivity" />
         <activity android:name=".ui.activities.HomeActivity" />
         <activity
             android:name=".ui.activities.FirstActivity"
